fix vertical alignments of sidebar navigation

--- a/less/_canary.less
+++ b/less/_canary.less
@@ -66,3 +66,17 @@
 		top: 3px !important;
 	}
 }
+
+//**********************************************/
+//* sidebar-navigation 36.0.1949.2
+//**********************************************/
+
+.panel:not(.elements):not(.console) {
+
+	.base-storage-tree-element-title,
+	.base-storage-tree-element-subtitle,
+	.base-navigator-tree-element-title {
+		color: @global-text !important;
+		top: 0 !important;
+	}
+}
