--- a/less/_sidebar-navigation.less
+++ b/less/_sidebar-navigation.less
@@ -8,7 +8,7 @@
 	.base-storage-tree-element-subtitle,
 	.base-navigator-tree-element-title {
 		color: @global-text !important;
-		top: 2px !important;
+		top: 1px !important;
 	}
 
 	/*-- currently selected element --*/
